cabal-version:       >=1.10
name:                puzzld
version:             0.1.0
synopsis:            A websocket puzzle solve state sharing server
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rob@vllmrt.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

executable puzzld
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       http-types,
                       wai,
                       wai-websockets,
                       warp,
                       websockets,
                       text
  -- hs-source-dirs:
  default-language:    Haskell2010
