cabal-version:       >=1.10
name:                puzzld
version:             0.1.0
synopsis:            A websocket puzzle solve state sharing server
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rob@vllmrt.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

executable puzzld
  main-is:             Main.hs
  other-modules:       Web
  -- other-extensions:
  build-depends:       base >=4.12 && <4.14,
                       containers,
                       http-types,
                       rio,
                       wai,
                       wai-websockets,
                       warp,
                       websockets,
                       text
  -- hs-source-dirs:
  default-language:    Haskell2010
